--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "系统学习和掌握React全家桶的实战应用，功能包括：",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
   },
   "repository": {
     "type": "git",
@@ -14,6 +14,7 @@
   "author": "Stella",
   "license": "ISC",
   "devDependencies": {
+    "conventional-changelog": "^3.1.21",
     "cz-conventional-changelog": "^3.2.0",
     "husky": "^4.2.5"
   },
