--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "@ant-design/icons": "^4.2.1",
+    "@types/antd": "^1.0.0"
   }
 }
