--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/qs": "^6.9.3",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
@@ -26,6 +27,7 @@
     "@types/redux-promise": "^0.5.29",
     "@types/redux-thunk": "^2.1.0",
     "antd": "^4.3.4",
+    "axios": "^0.19.2",
     "connected-react-router": "^6.8.0",
     "immer": "^7.0.1",
     "qs": "^6.9.4",
