feat: add login and uploadAvatar

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ server/node_modules/
 server/jspm_packages/
  
 # Typescript v1 declaration files
-typings/
+# typings/
  
 # Optional npm cache directory
 .npm
