--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc ",
+    "build:start": "cross-env PORT=8000 nodemon dist/index.js ",
     "start": "cross-env PORT=8000 ts-node-dev --respawn src/index.ts",
     "dev": "cross-env PORT=8000 nodemon --exec ts-node --files src/index.ts"
   },
