--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.2.1",
+    "@types/antd": "^1.0.0",
     "@types/axios": "^0.14.0",
     "@types/qs": "^6.9.3",
     "@types/react": "^16.9.38",
@@ -55,12 +57,14 @@
     "file-loader": "^6.0.0",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^4.3.0",
+    "image-webpack-loader": "^6.0.0",
     "less": "^3.11.3",
     "less-loader": "^6.1.1",
     "lib-flexible": "^0.3.2",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "purgecss-webpack-plugin": "^2.3.0",
     "px2rem-loader": "^0.1.9",
     "source-map-loader": "^1.0.0",
     "style-loader": "^1.2.1",
